Bug 128596 - FILEOPEN PPTX: Rectangle size and rounded corners
Summary: FILEOPEN PPTX: Rectangle size and rounded corners
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.4.0
Keywords: filter:pptx
Depends on:
Blocks: PPTX-Shapes
  Show dependency treegraph
 
Reported: 2019-11-04 22:33 UTC by Ofir
Modified: 2023-08-30 17:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Rect with rounded corners (112.69 KB, application/zip)
2019-11-04 22:33 UTC, Ofir
Details
PDF export from PowerPoint (15.65 KB, application/pdf)
2019-11-04 22:34 UTC, Ofir
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ofir 2019-11-04 22:33:18 UTC
Description:
The PowerPoint presentation has a rectangle shape with rounded corners. The shape is imported with smaller size and no rounded corners.

Steps to Reproduce:
1. Open the PowerPoint presentation in Impress
2. Compare the rect size and corners to the PDF export from PowerPoint.

Actual Results:
Small rect without rounded corners.

Expected Results:
Larger rect with rounded corners.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Ofir 2019-11-04 22:33:57 UTC
Created attachment 155511 [details]
Rect with rounded corners
Comment 2 Ofir 2019-11-04 22:34:28 UTC
Created attachment 155512 [details]
PDF export from PowerPoint
Comment 3 Xisco Faulí 2019-11-05 11:33:26 UTC
Reproduced in

Version: 6.4.0.0.alpha1+
Build ID: ee909ca2c02f949605f68720c3f1eef658502749
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.15; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e


LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 4 Regina Henschel 2019-11-05 13:40:18 UTC
The filling is an image, no solid color. Workaround: Set the filling to "stretch".
Comment 5 Commit Notification 2022-02-28 13:16:10 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/259a8e59107bb0a3d4f4f4bb7e056ce1e4231da2

tdf#128596 PPTX import: fix default tiled bitmap fill

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 NISZ LibreOffice Team 2022-03-10 10:04:07 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6adabd915d931b845fcf2fef15fbf3fca14ec9b3
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded