tdf#128596 PPTX import: fix default tiled bitmap fill

OOXML bitmap fill element a:blipFill has got default tiled
area setting without explicit a:tile in MSO. Previous import
of bitmap fill as "BitmapMode_NO_REPEAT" instead of
BitmapMode_REPEAT resulted missing or incomplete area fill
of shapes and other objects.

Change-Id: Idf94f4450980f67172a0126784b3e08cc5c178c2